--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 
 zammad_version: 'stable'
 
+zammad_ssl_on: yes
 zammad_ssl_dir: '/etc/ssl/zammad'
 zammad_ssl_cert_key_local_path: '/tmp'
 zammad_ssl_cert_local_path: '/tmp'
